Added bio field to user model.
